--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,6 +35,6 @@ jobs:
           curl https://repo1.maven.org/maven2/org/junit/platform/junit-platform-console-standalone/1.5.2/junit-platform-console-standalone-1.5.2.jar -o lib/junit-platform-console-standalone-1.5.2.jar
           curl https://repo1.maven.org/maven2/javax/servlet/javax.servlet-api/3.0.1/javax.servlet-api-3.0.1.jar -o lib/javax.servlet-api-3.0.1.jar
           curl https://repo1.maven.org/maven2/org/jfree/jcommon/1.0.17/jcommon-1.0.17.jar -o lib/jcommon-1.0.17.jar
-          javac -d bin/ -cp bin:lib/junit-platform-console-standalone-1.5.2.jar:javax.servlet-api-3.0.1.jar:jcommon-1.0.17.jar:mockito-all-2.0.2-beta.jar $(find src/ -name "*.java")
-          javac -d bin -cp bin:lib/junit-platform-console-standalone-1.5.2.jar:javax.servlet-api-3.0.1.jar:jcommon-1.0.17.jar:mockito-all-2.0.2-beta.jar:gnujaxp.jar:jcommon-1.0.0-rc1-cvs.jar:jcommon-1.0.5.jar:servlet.jar $(find test/ -name "*.java")
+          javac -d bin/ -cp bin:lib/*.jar $(find src/ -name "*.java")
+          javac -d bin -cp bin:lib/*.jar $(find test/ -name "*.java")
           java -jar lib/junit-platform-console-standalone-1.5.2.jar -cp bin --scan-class-path
